--- a/css/main.css
+++ b/css/main.css
@@ -25,6 +25,10 @@ a{
 .inactive{
     display: none;
 }
+.unvisibility{
+    visibility: hidden;
+    height: 0;
+}
 header{
     width: 100%;
     height: 140px;
@@ -160,6 +164,7 @@ nav .profile-link a:hover{
     margin-bottom: 15px;
 }
 .blogs-button{
+    display: inline-block;
     border: #61f2f5 solid 1px;
     padding: 10px 15px;
     font-size: 12px;
